# bzl

./: .gitignore  BUILD  BUILD.bazel  LICENSE  Makefile  README.md  WORKSPACE  app.go  app_test.go  install_test.sh  main.go
bazel/: BUILD.bazel
bazelutil/: BUILD.bazel  bazelutil.go
command/: BUILD.bazel
command/fmt/: BUILD.bazel  fmt.go
command/install/: BUILD.bazel  install.go
command/release/: BUILD.bazel  release.go
command/targets/: BUILD.bazel  targets.go
command/use/: BUILD.bazel  install.go  use.go
config/: BUILD.bazel
docs/: .gitignore  0_index.md  CNAME  README.md  _config.yml  cli-usage.md  codesearch.md  community.md  configuration.md  events.md  files.md  flags.md  getting-started.md  remote-cache-overview.md  repositories.md  rules.md  streams.md  ui-overview.md  videos.md  workspaces.md
gh/: BUILD.bazel  gh.go
go/bzl/: BUILD  app.go  bzl.go
go/bzl/bazel/: BUILD  bazel.go
go/bzl/command/: BUILD  command.go
go/bzl/command/install/: BUILD  install.go
go/bzl/command/release/: BUILD  release.go
go/bzl/command/targets/: BUILD  targets.go
go/bzl/config/: BUILD  config.go
go/bzl/gh/: BUILD  gh.go
go/bzl/plugin/: BUILD  plugin.go  server.go
go/bzl/server/: BUILD  server.go
proto/: BUILD  api.proto  build.proto
proto/bes/: BUILD.bazel
tools/: get_workspace_status.sh
