load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

gazelle(
    name = "gazelle",
    # args = [
    #     "-build_file_name",
    #     "BUILD,BUILD.bazel",
    #     "-proto",
    #     "disable",
    # ],
    command = "fix",
    prefix = "github.com/bzl-io/bzl",
)

buildifier(
    name = "buildifier",
)

go_test(
    name = "go_default_test",
    srcs = ["app_test.go"],
    embed = [":go_default_library"],
)

go_library(
    name = "go_default_library",
    srcs = ["app.go"],
    importpath = "github.com/bzl-io/bzl",
    visibility = ["//visibility:private"],
    deps = [
        "//bazelutil:go_default_library",
        "//command/fmt:go_default_library",
        "//command/install:go_default_library",
        "//command/release:go_default_library",
        "//command/targets:go_default_library",
        "//command/use:go_default_library",
        "@com_github_urfave_cli//:go_default_library",
    ],
)

go_binary(
    name = "bzl",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
    x_defs = {
        "main.BuildScmRevision": "{BUILD_SCM_REVISION}",
        "main.BuildScmDate": "{BUILD_SCM_DATE}",
    },
)
