load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["bazelutil.go"],
    importpath = "github.com/bzl-io/bzl/bazelutil",
    visibility = ["//visibility:public"],
    deps = [
        "//config:go_default_library",
        "//proto/bes:go_default_library",
        "//proto/build:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_matttproud_golang_protobuf_extensions//pbutil:go_default_library",
    ],
)
