load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["fmt.go"],
    importpath = "github.com/bzl-io/bzl/command/fmt",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_urfave_cli//:go_default_library",
        "@com_google_bazelbuild_buildtools//build:go_default_library",
        "@com_google_bazelbuild_buildtools//differ:go_default_library",
        "@com_google_bazelbuild_buildtools//tables:go_default_library",
        "@com_google_bazelbuild_buildtools//warn:go_default_library",
    ],
)
