load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["install.go"],
    importpath = "github.com/bzl-io/bzl/command/install",
    visibility = ["//visibility:public"],
    deps = [
        "//bazelutil:go_default_library",
        "//gh:go_default_library",
        "@com_github_dustin_go_humanize//:go_default_library",
        "@com_github_google_go_github//github:go_default_library",
        "@com_github_joeybloggs_go_download//:go_default_library",
        "@com_github_mitchellh_go_homedir//:go_default_library",
        "@com_github_mitchellh_ioprogress//:go_default_library",
        "@com_github_urfave_cli//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)
