load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["targets.go"],
    importpath = "github.com/bzl-io/bzl/command/targets",
    visibility = ["//visibility:public"],
    deps = [
        "//bazelutil:go_default_library",
        "//proto/build:go_default_library",
        "@com_github_fatih_color//:go_default_library",
        "@com_github_urfave_cli//:go_default_library",
    ],
)
