load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["use.go"],
    importpath = "github.com/bzl-io/bzl/command/use",
    visibility = ["//visibility:public"],
    deps = [
        "//command/install:go_default_library",
        "//gh:go_default_library",
        "@com_github_google_go_github//github:go_default_library",
        "@com_github_urfave_cli//:go_default_library",
    ],
)
