load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "build_event_stream_proto",
    srcs = ["build_event_stream.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "build_event_stream_go_proto",
    importpath = "github.com/bzl-io/bzl/proto/bes",
    proto = ":build_event_stream_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":build_event_stream_go_proto"],
    importpath = "github.com/bzl-io/bzl/proto/bes",
    visibility = ["//visibility:public"],
)
